add html and css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<h1>welcome to moringa</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Sample HTML Page</title>
+    <link rel="stylesheet" type="text/css" href="/styles.css">
+
+    
+</head>
+<body>
+    <header>
+        <h1 id="header"> Welcome to My Webpage</h1>
+        <nav>
+            <ul>
+                <li class="unorderd-list"><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li ><a href="#">Contact</a></li>
+                <li class="unorderd-list">new list </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>About Me</h2>
+            <p>This is a brief introduction about me and my journey in moringa.</p>
+        </section>
+
+        <section>
+            <h2>Services</h2>
+            <ul>
+                <li class="unorderd-list">Web Design</li>
+                <li >Graphic Design</li>
+                <li>SEO</li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>image </h3>
+            <img src="https://picsum.photos/500" alt="our page images" height="450" width="650"/>
+         </section>
+
+         <section>
+            
+         </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 My Company</p>
+    </footer>
+</body>
+</html>
